<resources>
    <string name="app_name">PimPam</string>

    <!-- Drawer -->
    <string name="addComic">Añadir cómic</string>
    <string name="seeCollection">Mi Colección</string>
    <string name="settings">Ajustes</string>
    <string name="placeholderName">Andres Paul</string>
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="error_general">Ha habido un error.</string>
    <string name="error_title">Error</string>
    <string name="body_connection_error">Se necesita conexión a Internet para funcionar. Por favor, activa la red WIFI o tu conexión de datos.</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, quis dignissim libero aliquam id. Donec sollicitudin ultrices ante, a semper erat tristique in. Vivamus sodales in ligula at sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla tempus bibendum nibh, ac tincidunt quam convallis non. Proin dolor nunc, egestas et tortor consequat, dignissim lacinia odio. Ut ut aliquet erat.  Ut non scelerisque elit. Morbi dolor neque, iaculis eu justo rutrum, aliquet dictum mauris. Phasellus quis massa ut ligula feugiat congue a et dolor. Etiam a dui a sapien ornare accumsan ac ut lorem. Suspendisse vehicula lorem dapibus nibh rhoncus ultricies. Proin sem nulla, elementum quis pharetra quis, commodo vitae nisi. Donec urna orci, posuere et iaculis sit amet, fringilla quis sapien. Pellentesque nec posuere felis. Praesent malesuada tellus nisi, non dictum justo interdum eget. Quisque mollis euismod libero, non aliquam lorem interdum vitae. Aliquam vehicula efficitur purus eget rutrum. Sed pulvinar fermentum risus ac viverra. Cras laoreet ligula quam, ac lacinia nisl elementum in. Aenean velit arcu, euismod a venenatis non, pulvinar pulvinar massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, quis dignissim libero aliquam id. Donec sollicitudin ultrices ante, a semper erat tristique in. Vivamus sodales in ligula at sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla tempus bibendum nibh, ac tincidunt quam convallis non. Proin dolor nunc, egestas et tortor consequat, dignissim lacinia odio. Ut ut aliquet erat.  Ut non scelerisque elit. Morbi dolor neque, iaculis eu justo rutrum, aliquet dictum mauris. Phasellus quis massa ut ligula feugiat congue a et dolor. Etiam a dui a sapien ornare accumsan ac ut lorem. Suspendisse vehicula lorem dapibus nibh rhoncus ultricies. Proin sem nulla, elementum quis pharetra quis, commodo vitae nisi. Donec urna orci, posuere et iaculis sit amet, fringilla quis sapien. Pellentesque nec posuere felis. Praesent malesuada tellus nisi, non dictum justo interdum eget. Quisque mollis euismod libero, non aliquam lorem interdum vitae. Aliquam vehicula efficitur purus eget rutrum. Sed pulvinar fermentum risus ac viverra. Cras laoreet ligula quam, ac lacinia nisl elementum in. Aenean velit arcu, euismod a venenatis non, pulvinar pulvinar massa.</string>
    <string name="news_image_message">¿De dónde quieres obtener la imagen?</string>
    <string name="news_image_camera">Cámara</string>
    <string name="news_image_gallery">Galería</string>
    <string name="warning_modal_title">Cambiar imagen</string>
    <string name="name_add_comic">Nombre</string>
    <string name="descrption_add_comic">Editorial</string>
    <string name="allFieldsRequired">Es necesario rellenar todos los campos.</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_add_favourite">Añadir a favoritos</string>
    <string name="action_delete">Eliminar</string>
    <string name="backdrop_title">MI COLECCIÓN</string>
    <string name="backdrop_subtitle">Los cómics de tu colección</string>
    <string name="empty_name_comic">Por favor, introduzca una serie.</string>
    <string name="empty_editorial_comic">Por favor, introduzca una editorial.</string>
    <string name="loading">Cargando…</string>
    <string name="serie">Serie</string>
    <string name="empty_numero_comic">Por favor, introduzca un número de tomo.</string>
    <string name="numero">Número</string>
    <string name="anyo">Año</string>
    <string name="comic_addded_succesfull">Cómic añadido correctamente</string>
    <string name="email_field">Email</string>
    <string name="password_field">Contraseña</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="continuar_button">Continuar</string>
    <string name="logout_button">Cerrar sesión</string>
    <string name="logout_confirm">¿Está seguro que quiere cerrar sesión?</string>
    <string name="searchToolbarHint">Busca tu cómic, serie o editorial.</string>
    <string name="logingoogle_button">Continuar con Google</string>
    <string name="comicInFav">Está en tu lista de favoritos</string>
    <string name="comicNotInFav">No está en tu lista de favoritos</string>
    <string name="comicDeleted">Cómic eliminado correctamente</string>
    <string name="comicUpdated">Cómic actualizado correctamente</string>
    <string name="signup_button">Crear una cuenta</string>
    <string name="auth_failed">Error en el registro.</string>
    <string name="password_length">La contraseña debe tener 6 carácteres como mínimo.</string>
    <string name="register_succesful">Registro completado correctamente</string>
    <string name="login_succesful">Sesión iniciada correctamente</string>
    <string name="login_failed">Error en el inicio de sesión</string>
    <string name="restore_password">He olvidado la contraseña</string>
    <string name="succesful_restored_pass">Hemos enviado un email a tu correo electrónico para recuperar tu contraseña.</string>
    <string name="no_comics">Todavía no tienes cómics, añádelos</string>
    <string name="no_results">No hemos encontrado ningún cómic</string>



    <string name="icon_signup">&#xf234;</string>
    <string name="icon_login">&#xf007;</string>
    <string name="icon_google">&#xf1a0;</string>
    <string name="language">Idioma</string>
    <string name="spanish">Español</string>
    <string name="english">Inglés</string>
    <string name="valencia">Valenciano</string>
    <string name="deleteAllComics">Eliminar todos los comics</string>
    <string name="atention">Atención!</string>
    <string name="confirmdelete">¿Estás seguro que quieres borrar todos los comics?</string>
    <string name="comicsDeletedOk">Comics eliminados correctamente</string>
    <string name="cameraPermissionsDenied">Necesitamos tu permiso para abrir la cámara</string>
    <string name="noName">Sin nombre</string>
    <string name="editing">Editando </string>
    <string name="profileUpdatedCorrectly">Informacion del perfil actualizada correctamente</string>


</resources>
