<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:focusable="true"
    android:focusableInTouchMode="true"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jcollado.pw.pimpam.controller.AuthActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/name_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp">

        <EditText
            android:id="@+id/nameED"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:hint="@string/name_add_comic"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_input_layout"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/emailED"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:hint="@string/email_field"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_input_layout"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/passwordED"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:hint="@string/password_field"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_input_layout"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_weight="1"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"

            app:fb_defaultColor="@color/primary_dark"
            app:fb_focusColor="@color/primary"
            fancy:fb_iconPaddingRight= "10dp"
            fancy:fb_fontIconSize="15sp"
            fancy:fb_borderColor="#FFFFFF"

            fancy:fb_borderWidth="1dp"
            fancy:fb_fontIconResource="@string/icon_login"
            fancy:fb_iconPosition="left"
            fancy:fb_radius="30dp"
            fancy:fb_text="@string/login_button"
            fancy:fb_textColor="#FFFFFF" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:paddingBottom="12dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="12dp"
            app:fb_defaultColor="@color/primary_dark"
            app:fb_focusColor="@color/primary"
            fancy:fb_borderColor="#FFFFFF"
            fancy:fb_borderWidth="1dp"
            fancy:fb_fontIconResource="@string/icon_signup"
            fancy:fb_fontIconSize="15sp"
            fancy:fb_iconPaddingRight="10dp"
            fancy:fb_radius="30dp"
            fancy:fb_text="@string/signup_button"
            fancy:fb_textColor="#FFFFFF">

        </mehdi.sakout.fancybuttons.FancyButton>

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btn_restore_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            app:fb_defaultColor="@color/accent"
            app:fb_focusColor="@color/accent"
            fancy:fb_borderColor="#FFFFFF"
            fancy:fb_borderWidth="1dp"
            fancy:fb_radius="30dp"
            fancy:fb_text="@string/restore_password"
            fancy:fb_textColor="#FFFFFF">

        </mehdi.sakout.fancybuttons.FancyButton>
    </LinearLayout>

</RelativeLayout>
